Refactor to use mapMulti